# understanding-deep-learning

./: .gitignore  Dockerfile  _quarto.yml  index.qmd  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
docs/assets/illustrations/beginner/perceptron/: perceptron.ppm  perceptron_source.txt
docs/beginner/: Perceptron.ipynb
docs/beginner/gradient_descent/: 01_gd_fundamentals.ipynb  02_sgd_and_others.ipynb
site/: index.html  search.json
site/docs/beginner/: Perceptron.html
site/docs/beginner/gradient_descent/: 01_gd_fundamentals.html
site/site_libs/bootstrap/: bootstrap-71a5bc19f5f3033fb2af15be602ae938.min.css  bootstrap-e007cafdc92152c0a24373e6323eafae.min.css
src/: __init__.py
src/beginner/gradient_descent/: __init__.py
src/illustration_utils/: plot_image.py
tests/: test_beginner_gd.py
tests/illustration_utils/: test_plot_image.py
